# CAMPUS

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: .gitignore  CMakeLists.txt  README.md  bench_campus.cc  bench_campus.sh  bench_campus_gist.sh  bench_campus_sift.sh  bench_campus_siftsmall.sh  bench_ivfflat.cc  bench_nocontrol.cc  bench_serial.cc  bench_serial.sh  bench_serial_gist.sh  bench_serial_sift.sh  bench_serial_siftsmall.sh
benchmarks/datasets/: .gitignore
src/: CMakeLists.txt
src/campus/: CMakeLists.txt  campus.cc  campus.h  entity.h  insert.cc  node.cc  node.h  query.cc  version.cc  version.h
src/nocontrol/: CMakeLists.txt  entity.h  insert.cc  nocontrol.cc  nocontrol.h  node.cc  node.h
src/serial/: CMakeLists.txt  entity.h  insert.cc  node.cc  node.h  serial.cc  serial.h
src/utils/: CMakeLists.txt  distance.cc  distance.h  lock.h
